refactor: task 6 - optimize vowel/consonant counting using Set.